--- a/backend/package.json
+++ b/backend/package.json
@@ -2,18 +2,48 @@
   "name": "knowledge-base-api",
   "version": "1.0.0",
   "description": "Backend API for Knowledge Base System",
-  "main": "api/index.js",
+  "main": "src/server.js",
+  "type": "module",
   "scripts": {
-    "dev": "vercel dev",
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js",
+    "db:create": "node scripts/create-db.js",
+    "db:init": "node scripts/init-postgres.js",
+    "db:reset": "node scripts/reset-db.js",
+    "test": "NODE_ENV=test jest",
+    "test:watch": "NODE_ENV=test jest --watch",
+    "lint": "eslint .",
+    "format": "prettier --write .",
     "deploy": "vercel deploy --prod"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "@supabase/supabase-js": "^2.49.8",
+    "body-parser": "^1.20.2",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "express": "^4.18.2",
+    "express-validator": "^7.0.1",
+    "helmet": "^7.1.0",
+    "http-status-codes": "^2.2.0",
+    "mongoose": "^8.15.0",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "body-parser": "^1.20.2"
+    "pg": "^8.16.0",
+    "pg-hstore": "^2.3.4",
+    "pgvector": "^0.2.1",
+    "sequelize": "^6.37.7",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
-    "vercel": "^32.5.0"
+    "eslint": "^8.56.0",
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.10",
+    "prettier": "^3.2.4",
+    "supertest": "^6.3.3",
+    "vercel": "^32.7.2"
+  },
+  "engines": {
+    "node": ">=16.0.0"
   }
 }
